# handlers/auth/routes.go
@@ -14,5 +14,7 @@ func RegisterRoutes(r *gin.RouterGroup) {
 		auth.GET("/check", CheckAuth)
 		auth.POST("/register", RegisterUser)
 		auth.POST("/logout", Logout)
+		auth.POST("/request-reset", RequestPasswordReset)
+		auth.POST("/reset-password", ResetPassword)
 	}
 }
